# sphinx-json-index

./: README.md  pyproject.toml
sphinx_json_index/: main.py
sphinx_jsonindex/: __init__.py  main.py
