[project]
name = "sphinx-json-index"
version = "0.0.0"
description = "A simple sphinx extension to build a json index from html files."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
authors = [
    {name = "Yuri Ximenes", email = "yx.dev@gmx.ie"},
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sphinx_json_index*"]

